@@ -185,12 +185,12 @@ table {
   --lh6: 2;
 
   --rlh0: 1rem;
-  --rlh1: 1.125rem;
-  --rlh2: 1.25rem;
-  --rlh3: 1.375rem;
-  --rlh4: 1.5rem;
-  --rlh5: 1.75rem;
-  --rlh6: 2rem;
+  --rlh1: 1.25rem;
+  --rlh2: 1.5rem;
+  --rlh3: 1.75rem;
+  --rlh4: 2rem;
+  --rlh5: 2.25rem;
+  --rlh6: 2.5rem;
 
   --lsh: -0.025em;
   --lsd: -0.05em;
