@@ -47,13 +47,13 @@
   --lh5: 1.750;     /* 28 */
   --lh6: 2.000;     /* 32 */
 
-  --rlh0: 1.000rem; /* 16 */
-  --rlh1: 1.125rem; /* 18 */
-  --rlh2: 1.250rem; /* 20 */
-  --rlh3: 1.375rem; /* 22 */
-  --rlh4: 1.500rem; /* 24 */
-  --rlh5: 1.750rem; /* 28 */
-  --rlh6: 2.000rem; /* 32 */
+  --rlh0: 1.00rem; /* 16 */
+  --rlh1: 1.25rem; /* 20 */
+  --rlh2: 1.50rem; /* 24 */
+  --rlh3: 1.75rem; /* 28 */
+  --rlh4: 2.00rem; /* 32 */
+  --rlh5: 2.25rem; /* 36 */
+  --rlh6: 2.50rem; /* 40 */
 
   --lsh: -0.025em;
   --lsd: -0.050em;
