@@ -4,6 +4,7 @@
   * (cursor) move
   * (copy) remove depreciated vars
   * (border) br to border-radius
+  * (type) update rlh variables
 
 # 0.18.0 (2021-11-18)
 
